[package]
name = "stream-jenkins-logs"
description = "Stream jenkins logs for a given build"
version = "0.1.2"
authors = ["Stefan Ruzitschka <stefan@icepuma.dev>"]
edition = "2018"
license = "WTFPL"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["jenkins", "cli", "developer-tools", "logs", "stream"]

[dependencies]
reqwest = "0.9.17"
clap = "2.33.0"
url = "1.7.2"
